Added js dependency links

--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Warmup MSP2</title>
-    <!-- don't forget the dc stylesheet! -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Scripts -->
     <script src="assets/js/dependencies/jquery-3.3.1.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://fastcdn.org/D3.js/3.5.6/d3.min.js"></script>
-    <script src="assets/js/dependencies/d3.min.js"></script>
-    <script src="assets/js/dependencies/crossfilter.min.js"></script>
-    <script src="assets/js/dependencies/reductio.min.js"></script>
-    <!-- REMEMBER TO DELETE PRINT_FILTER IF NOT USED -->
-    <script src="assets/js/dependencies/print_filter.js"></script>
-    <script src="assets/js/dependencies/dc.min.js"></script>
-    <script src="assets/js/dependencies/queue.min.js"></script>
-    <!--custom js for chart rendering-->
-    <!--<script src="assets/js/chartScript.js"></script>-->
-    <script src="assets/js/chartScript-simple.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </head>
 <body>
     <!--not needed atm-->
