Added basic navbar

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <!--not needed atm-->
-    <!--<div id="source-selector"></div>-->
-    
+    <nav class="navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="#"><h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1></a>
+    </nav>
     <div class="col-xs-12">
         <h2>Total emissions Figure</h2>
         <div id="total-emissions-figure"></div>
