--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <a class="navbar-brand" href="#"><h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1></a>
     </nav>
     <main class="container-fluid">
+        <section class="row">
+            
+        </section>
         <div class="col-xs-12">
             <h2>Total emissions Figure</h2>
             <div id="total-emissions-figure"></div>
