Added markup for first number display

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
         </section>
         <section class="row">
             <h2>Highlights</h2>
+            <figure>
+                <div id="total-emissions-figure"></div>
+                <figcaption>Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
+            </figure>
         </section>
         <div class="col-xs-12">
             <h2>Total emissions Figure</h2>
-            <div id="total-emissions-figure"></div>
         </div>
         <div class="col-xs-12">
             <h2>Average emissions Figure</h2>
