--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <p>Road transport in particular is a major contributor to greenhouse gas emissions in many countries. In the UK, as of 2018 <a href="https://www.independent.co.uk/environment/air-pollution-uk-transport-most-polluting-sector-greenhouse-gas-emissions-drop-carbon-dioxide-a8196866.html" target="_blank">the majority of man-made greenhouse gas emissions come from road transport</a>. The dashboard below visualises the latest official statistics available from UK government sources, covering road transport emissions between the years 1990 and 2016. More information on the statistics used to generate this dashboard can be found <a href="https://www.gov.uk/government/statistics/final-uk-greenhouse-gas-emissions-national-statistics-1990-2016" target="_blank">here</a>.</p>
             </div>
         </section>
+        <h2 class="text-center">Highlights</h2>
         <section class="row">
-            <h2>Highlights</h2>
             <figure>
                 <div id="total-emissions-figure"></div>
                 <figcaption>Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
