Formatted first number display figure to be center aligned

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </div>
         </section>
         <h2 class="text-center">Highlights</h2>
-        <section class="row">
-            <figure>
-                <div id="total-emissions-figure"></div>
-                <figcaption>Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
+        <section>
+            <figure class="row text-center">
+                <div id="total-emissions-figure" class="col-12"></div>
+                <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
             </figure>
         </section>
         <div class="col-xs-12">
