--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
-    <!-- Custom Script -->
-    <script src="assets/js/script.js"></script>
+    <!-- Custom Scripts -->
+    <script src="assets/js/chartScript.js"></script>
 </body>
 </html>
