Created numberFormatter.js and linked to index.html

--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
     <!-- Custom Scripts -->
     <script src="assets/js/chartScript.js"></script>
+    <script src="assets/js/numberFormatter.js"></script>
 </body>
 </html>
