Added .number-display to #total-emissions-figure div

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2 class="text-center">Highlights</h2>
         <section>
             <figure class="row text-center">
-                <div id="total-emissions-figure" class="col-12"></div>
+                <div id="total-emissions-figure" class="col-12 number-display"></div>
                 <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
             </figure>
         </section>
