Formatted average emissions number display

--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
                 <div id="total-emissions-figure" class="col-12 number-display"></div>
                 <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
             </figure>
+            <figure class="row text-center">
+                <div id="average-emissions-figure" class="col-12 number-display"></div>
+                <figcaption class="col-12">Average emissions emitted each year.</figcaption>
+            </figure>
         </section>
-        <div class="col-xs-12">
-            <h2>Average emissions Figure</h2>
-            <div id="average-emissions-figure"></div>
-        </div>
-        
         <div class="col-xs-12">
             <h2>Total Emissions car petrol</h2>
             <div id="show-total-figure"></div>
