--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </figure>
             <figure class="row text-center">
                 <div id="average-emissions-figure" class="col-12 number-display"></div>
-                <figcaption class="col-12">Average emissions emitted each year.</figcaption>
+                <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
             </figure>
         </section>
         <div class="col-xs-12">
