Formatted total emissions over time graph

--- a/index.html
+++ b/index.html
@@ -28,20 +28,18 @@
             </div>
         </section>
         <h2 class="text-center">Highlights</h2>
-        <section>
-            <figure class="row text-center">
-                <div id="total-emissions-figure" class="col-12 number-display"></div>
-                <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
-            </figure>
-            <figure class="row text-center">
-                <div id="average-emissions-figure" class="col-12 number-display"></div>
-                <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
-            </figure>
-        </section>
-        <div class="col-xs-12">
-            <h2>Total emissions over time</h2>
+        <figure class="row text-center">
+            <div id="total-emissions-figure" class="col-12 number-display"></div>
+            <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
+        </figure>
+        <figure class="row text-center">
+            <div id="average-emissions-figure" class="col-12 number-display"></div>
+            <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
+        </figure>
+        <figure class="col-xs-12">
             <div id="total-emissions-over-time"></div>
-        </div>
+            <figcaption class="col-12">Total emissions over the period.</figcaption>
+        </figure>
         <div class="col-xs-12">
             <h2>Total Emissions car petrol</h2>
             <div id="show-total-figure"></div>
