Created charts.scss and linked to style.scss

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
             <div id="average-emissions-figure" class="col-12 number-display"></div>
             <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
         </figure>
-        <figure class="col-xs-12">
+        
+        <figure class="row">
             <div id="total-emissions-over-time"></div>
             <figcaption class="col-12">Total emissions over the period.</figcaption>
         </figure>
+        
         <div class="col-xs-12">
             <h2>Total Emissions car petrol</h2>
             <div id="show-total-figure"></div>
