Moved total emissions figcaption to be above the chart

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </figure>
         
         <figure class="row">
+            <figcaption class="col-12 text-center">Total emissions over the period.</figcaption>
             <div id="total-emissions-over-time"></div>
-            <figcaption class="col-12">Total emissions over the period.</figcaption>
         </figure>
         
         <div class="col-xs-12">
