Added div for source selector

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
         </figure>
         
+        <div id="source-selector"></div>
+        
         <figure class="row">
             <figcaption class="col-12 text-center">Total emissions over the period.</figcaption>
             <div id="total-emissions-over-time"></div>
