--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         
         <figure class="row">
             <figcaption class="col-12 text-center">Total emissions over the period.</figcaption>
-            <div id="source-selector"></div>
-            <div id="total-emissions-over-time"></div>
+            <div id="source-selector" class="col-12"></div>
+            <div id="total-emissions-over-time" class="col-12"></div>
         </figure>
         
         <div class="col-xs-12">
