Adjusted bs cols for total-emissions-per-source charts

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <figure class="row">
             <figcaption class="col-12 text-center">Total emissions by type of vehicle.</figcaption>
             <div id="year-selector" class="col-12"></div>
-            <div id="total-emissions-per-source-pie" class="col-lg-6"></div>
-            <div id="total-emissions-per-source" class="col-lg-6"></div>
+            <div id="total-emissions-per-source-pie" class="col-xl-6"></div>
+            <div id="total-emissions-per-source" class="col-xl-6"></div>
         </figure>
         
         
