Formatted over time line graph and composite chart to be on the same BS row

--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@
         <figure class="row">
             <figcaption class="col-12 text-center">Total emissions over the period.</figcaption>
             <div id="source-selector" class="col-12"></div>
-            <div id="total-emissions-over-time" class="col-12"></div>
+            <div id="total-emissions-over-time" class="col-xl-6"></div>
+            <div id="composite-chart" class="col-xl-6"></div>
         </figure>
-        
-        <figure class="row">
-            <div id="composite-chart" class="col-12"></div>
-        </figure>
-        
+
         <figure class="row">
             <figcaption class="col-12 text-center">Total emissions by type of vehicle.</figcaption>
             <div id="year-selector" class="col-12"></div>
