--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <p>Road transport in particular is a major contributor to greenhouse gas emissions in many countries. In the UK, as of 2018 <a href="https://www.independent.co.uk/environment/air-pollution-uk-transport-most-polluting-sector-greenhouse-gas-emissions-drop-carbon-dioxide-a8196866.html" target="_blank">the majority of man-made greenhouse gas emissions come from road transport</a>. The dashboard below visualises the latest official statistics available from UK government sources, covering road transport emissions between the years 1990 and 2016. More information on the statistics used to generate this dashboard can be found <a href="https://www.gov.uk/government/statistics/final-uk-greenhouse-gas-emissions-national-statistics-1990-2016" target="_blank">here</a>.</p>
             </div>
         </section>
+        
         <h2 class="text-center">Highlights</h2>
         <figure class="row text-center">
             <div id="total-emissions-figure" class="col-12 number-display"></div>
@@ -37,9 +38,9 @@
             <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
         </figure>
         
-        <h2>Total emissions over the period.</h2>
+        <h2 class="text-center">Total emissions over the period.</h2>
         <figure class="row">
-            <figcaption class="col-12 text-center">
+            <figcaption class="offset-md-2 col-md-8">
                 <p>Cars are responsible for the bulk of emissions over the period, with petrol cars being the biggest contributor to the total emissions figure. However, although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990. Diesel as a fuel source has <a href="https://www.autoexpress.co.uk/car-news/consumer-news/98747/diesel-ban-the-future-of-diesel-cars-in-the-uk-and-beyond" target="_blank">attracted much negative criticism</a> in recent years, with this criticism perhaps stemming from diesel's rapid increase in pollution. There have even been calls for a <a href="https://www.theguardian.com/environment/2018/aug/23/ban-diesel-cars-from-cities-say-half-of-uk-drivers-in-poll" target="_blank">ban on diesel cars</a> in urban areas.</p>
                 <p>Some vehicle types (e.g. LPG vehicles) are responsible for relatively few emissions and may be difficult to see on the charts in comparison to more polluting vehicles. You can use the selection box below to select these vehicle types in order to get a better understanding of a particular emmisions trend for a given vehicle type.</p></figcaption>
             <div id="source-selector" class="col-12"></div>
