Changed source-figure div to span

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
-                <div id="show-source-figure" class="col-12 number-display"></div>
+                <span id="show-source-figure" class="col-12 number-display"></span>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
