--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
-                <p id="show-source-figure-p"></p><span id="show-source-figure" class="col-12 number-display"></span>
+                <p id="show-source-figure-p"></p><span id="show-year-figure" class="col-12 number-display"></span>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
@@ -62,7 +62,7 @@
         
         <div class="col-xs-12">
             <h2>Show year figure</h2>
-            <div id="show-year-figure"></div>
+            <div id="show-source-figure"></div>
         </div>
         
         <div class="col-xs-12">
