Updated show-source-figure p to be a span element and made ID more consistent by changing its name to #show-year-figure

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
-                <p id="show-source-figure-p"></p><span id="show-year-figure" class="col-12 number-display"></span>
+                <p><span id="show-year-figure-span"></span> <span id="show-year-figure"></span></p>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
