--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
-                <p><span id="show-year-figure-span"></span> <span id="show-year-figure"></span> kilotons throughout the period.</p>
+                <p><span id="show-year-figure-span"></span> <span id="show-year-figure"></span> kilotons of emissions throughout the period.</p>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
