--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
                 <p><span id="show-year-figure-span">There was a total of</span> <span id="show-year-figure"></span> kilotons of emissions throughout the period.</p>
+                <p><span id="show-year-figure-span"></span> constituted <span></span> of the emissions for the period.</p>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
