Changed .show-year-figure-span to be .show-source-span to be more semantic

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
-                <p><span class="show-year-figure-span">There was a total of</span> <span id="show-year-figure"></span> kilotons of emissions throughout the period.</p>
-                <p><span class="show-year-figure-span"></span> constituted <span></span> of the emissions for the period.</p>
+                <p><span class="show-source-span">There was a total of</span> <span id="show-year-figure"></span> kilotons of emissions throughout the period.</p>
+                <p><span class="show-source-span"></span> constituted <span></span> of the emissions for the period.</p>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
