--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
-                <p><span class="show-source-span">There was a total of</span> <span id="show-year-figure"></span> kilotons of emissions throughout the period.</p>
+                <p><span class="show-source-span">There was a total of</span> <span id="show-time-figure"></span> kilotons of emissions throughout the period.</p>
                 <p>That is <span></span> of the emissions for the period.</p>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
