--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="text-center col-12">
                 <h2>Show source figure</h2>
                 <p><span class="show-source-span">There was a total of</span> <span id="show-time-figure"></span> kilotons of emissions throughout the period.</p>
-                <p>That is <span></span> of the emissions for the period.</p>
+                <p>That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
