Added total emissions by type of vehicle h2

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             <div id="composite-chart" class="col-xl-6"></div>
         </figure>
 
+        <h2 class="text-center">Total emissions by type of vehicle.</h2>
         <figure class="row">
-            <figcaption class="col-12 text-center">Total emissions by type of vehicle.</figcaption>
+            <figcaption class="col-12 text-center"></figcaption>
             <div id="year-selector" class="col-12"></div>
             <div id="total-emissions-per-source-pie" class="col-xl-6"></div>
             <div id="total-emissions-per-source" class="col-xl-6"></div>
