--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <h2 class="text-center">Total emissions by type of vehicle.</h2>
         <figure class="row">
-            <figcaption class="col-12 text-center"></figcaption>
+            <figcaption class="offset-md-2 col-md-8"></figcaption>
             <div id="year-selector" class="col-12"></div>
             <div id="total-emissions-per-source-pie" class="col-xl-6"></div>
             <div id="total-emissions-per-source" class="col-xl-6"></div>
