Moved around descriptive paragraphs

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
         <h2 class="text-center">Total emissions over the period.</h2>
         <figure class="row">
             <figcaption class="offset-md-2 col-md-8">
-                <p>Cars are responsible for the bulk of emissions over the period, with petrol cars being the biggest contributor to the total emissions figure. However, although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990. Diesel as a fuel source has <a href="https://www.autoexpress.co.uk/car-news/consumer-news/98747/diesel-ban-the-future-of-diesel-cars-in-the-uk-and-beyond" target="_blank">attracted much negative criticism</a> in recent years, with this criticism perhaps stemming from diesel's rapid increase in pollution. There have even been calls for a <a href="https://www.theguardian.com/environment/2018/aug/23/ban-diesel-cars-from-cities-say-half-of-uk-drivers-in-poll" target="_blank">ban on diesel cars</a> in urban areas.</p>
-                <p>Some vehicle types (e.g. LPG vehicles) are responsible for relatively few emissions and may be difficult to see on the charts in comparison to more polluting vehicles. You can use the selection box below to select these vehicle types in order to get a better understanding of a particular emissions trend for a given vehicle type.</p>
                 </figcaption>
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
@@ -55,7 +53,10 @@
 
         <h2 class="text-center">Total emissions by type of vehicle.</h2>
         <figure class="row">
-            <figcaption class="offset-md-2 col-md-8"></figcaption>
+            <figcaption class="offset-md-2 col-md-8">
+                <p>Cars are responsible for the bulk of emissions over the period, with petrol cars being the biggest contributor to the total emissions figure. However, although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990. Diesel as a fuel source has <a href="https://www.autoexpress.co.uk/car-news/consumer-news/98747/diesel-ban-the-future-of-diesel-cars-in-the-uk-and-beyond" target="_blank">attracted much negative criticism</a> in recent years, with this criticism perhaps stemming from diesel's rapid increase in pollution. There have even been calls for a <a href="https://www.theguardian.com/environment/2018/aug/23/ban-diesel-cars-from-cities-say-half-of-uk-drivers-in-poll" target="_blank">ban on diesel cars</a> in urban areas.</p>
+                <p>Some vehicle types (e.g. LPG vehicles) are responsible for relatively few emissions and may be difficult to see on the charts in comparison to more polluting vehicles. You can use the selection box below to select these vehicle types in order to get a better understanding of a particular emissions trend for a given vehicle type.</p>
+            </figcaption>
             <div id="year-selector" class="col-12"></div>
             <div id="total-emissions-per-source-pie" class="col-xl-6"></div>
             <div id="total-emissions-per-source" class="col-xl-6"></div>
