--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 <!--<p>Some vehicle types, in particular motorcycles, mopeds, and LPG vehicles, make up a tiny fraction of total emissions</p>-->
             </figcaption>
             <div id="year-selector" class="col-12"></div>
+            <div class="text-center col-12">
+                <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions throughout the period.</p>
+                <p>That is <span id="show-period-figure-percentage"></span> of the emissions for the period.</p>
+            </div>
             <div id="total-emissions-per-source-pie" class="col-xl-6"></div>
             <div id="total-emissions-per-source" class="col-xl-6"></div>
         </figure>
