--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="#"><h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1></a>
     </nav>
     <main class="container-fluid">
-        <section class="row">
+        <section class="intro-text row">
             <div class="offset-md-2 col-md-8">
                 <p>A greenhouse gas is a gas that absorbs and emits radiant energy within the thermal infrared range, causing the greenhouse effect. On Earth, the primary greenhouse gases within the atmosphere are water vapour, carbon dioxide, methane, nitrous oxide and ozone.</p>
                 <p>Greenhouse gases and the greenhouse effect are not neccessarily bad things. Without them, the temperature of the Earth's surface would be on average about -18&#176;C (0&#176;F), rather than the present average of 15&#176;C (59&#176;F). At such low temperatures, life on Earth would be vastly different if not impossible, and human society would likely have not come to exist.</p>
