Changed 'Highlights' to be upper case

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </section>
         
-        <h2 class="text-center">Highlights</h2>
+        <h2 class="text-center">HIGHLIGHTS</h2>
         <figure class="row text-center">
             <div id="total-emissions-figure" class="col-12 number-display"></div>
             <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
