--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="#"><h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1></a>
     </nav>
     <main class="container-fluid">
-        <section class="intro-text row">
+        <section class="intro-text row reveal-one">
             <div class="offset-md-2 col-md-8">
                 <p>A greenhouse gas is a gas that absorbs and emits radiant energy within the thermal infrared range, causing the greenhouse effect. On Earth, the primary greenhouse gases within the atmosphere are water vapour, carbon dioxide, methane, nitrous oxide and ozone.</p>
                 <p>Greenhouse gases and the greenhouse effect are not neccessarily bad things. Without them, the temperature of the Earth's surface would be on average about -18&#176;C (0&#176;F), rather than the present average of 15&#176;C (59&#176;F). At such low temperatures, life on Earth would be vastly different if not impossible, and human society would likely have not come to exist.</p>
@@ -28,15 +28,17 @@
             </div>
         </section>
         
-        <h2 class="text-center">HIGHLIGHTS</h2>
-        <figure class="row text-center">
-            <div id="total-emissions-figure" class="col-12 number-display"></div>
-            <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
-        </figure>
-        <figure class="row text-center">
-            <div id="average-emissions-figure" class="col-12 number-display"></div>
-            <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
-        </figure>
+        <section class="reveal-two">
+            <h2 class="text-center">HIGHLIGHTS</h2>
+            <figure class="row text-center">
+                <div id="total-emissions-figure" class="col-12 number-display"></div>
+                <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
+            </figure>
+            <figure class="row text-center">
+                <div id="average-emissions-figure" class="col-12 number-display"></div>
+                <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
+            </figure>
+        </section>
         
         <h2 class="text-center">Total emissions over the period.</h2>
         <figure class="row">
@@ -82,7 +84,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
-    <!-- Custom Scripts -->
+    <!-- Page scroll scripts -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="assets/js/pageScroll.js"></script>
+    <!-- Custom scripts -->
     <script src="assets/js/chartScript.js"></script>
 </body>
 </html>
