--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             </figure>
         </section>
         
-        <h2 class="text-center">Total emissions over the period.</h2>
-        <figure class="row">
-            <figcaption class="offset-md-2 col-md-8">
+        <section class="row">
+            <h2>Total emissions over the period.</h2>
+            <div class="offset-md-2 col-md-8">
                 <p>Emissions from road transport rose steadily between 1990 and 2007. Beginning in 2008 emissions began to dip, reaching a period low of 108,134 kilotons in 2013. Since 2013 emissions have been on the rise again, although they are some way off the record highs in 2007; for the latest period (2016) emissions are about the same level as they were in the early 90's.</p>
                 <p>Cleaner and more efficient engines, rather than lower road usage, have helped keep emissions levels relatively stable, since the <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/741953/road-traffic-estimates-in-great-britain-2017.pdf" target="_blank"> traffic volume on UK roads is at record highs</a>. With increasing investment in cleaner fuel types, and a <a href="https://www.statista.com/topics/2298/the-uk-electric-vehicle-industry/" target="_blank">growing number of hybrid and electric vehicles on UK roads</a>, it is hoped that the emissions from UK roads will begin to decrease over the coming decades.</p>
                 <p>The two charts below show the trend in emissions over time. Use the selection box to focus on a particular vehicle type. You can also hover over the lines to see more information.</p>
-                </figcaption>
+            </div>
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <p><span class="show-source-span">There was a total of</span> <span id="show-time-figure"></span> kilotons of emissions throughout the period.</p>
@@ -54,7 +54,7 @@
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
-        </figure>
+        </section>
 
         <h2 class="text-center">Total emissions by type of vehicle.</h2>
         <figure class="row">
