Added class reveal-three to 3rd section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </figure>
         </section>
         
-        <section class="row">
+        <section class="row reveal-three">
             <h2>Total emissions over the period.</h2>
             <div class="offset-md-2 col-md-8">
                 <p>Emissions from road transport rose steadily between 1990 and 2007. Beginning in 2008 emissions began to dip, reaching a period low of 108,134 kilotons in 2013. Since 2013 emissions have been on the rise again, although they are some way off the record highs in 2007; for the latest period (2016) emissions are about the same level as they were in the early 90's.</p>
