--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/stylesheets/style.css" type="text/css" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-primary">
+    <nav class="navbar navbar-dark">
         <a class="navbar-brand" href="#"><h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1></a>
     </nav>
     <main class="container-fluid">
