Deleted redundant class number-display throughout index.html

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <section class="reveal-two">
             <h2 class="text-center">HIGHLIGHTS</h2>
             <figure class="row text-center">
-                <div id="total-emissions-figure" class="col-12 number-display"></div>
+                <div id="total-emissions-figure" class="col-12"></div>
                 <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
             </figure>
             <figure class="row text-center">
-                <div id="average-emissions-figure" class="col-12 number-display"></div>
+                <div id="average-emissions-figure" class="col-12"></div>
                 <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
             </figure>
         </section>
