--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         
         <section class="reveal-two">
-            <h2 class="text-center">HIGHLIGHTS</h2>
+            <h2 class="text-center text-uppercase">Highlights</h2>
             <figure class="row text-center">
                 <div id="total-emissions-figure" class="col-12"></div>
                 <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
@@ -41,7 +41,7 @@
         </section>
         
         <section class="row reveal-three">
-            <h2>Total emissions over the period.</h2>
+            <h2 class="text-uppercase">Total emissions over the period.</h2>
             <div class="offset-md-2 col-md-8">
                 <p>Emissions from road transport rose steadily between 1990 and 2007. Beginning in 2008 emissions began to dip, reaching a period low of 108,134 kilotons in 2013. Since 2013 emissions have been on the rise again, although they are some way off the record highs in 2007; for the latest period (2016) emissions are about the same level as they were in the early 90's.</p>
                 <p>Cleaner and more efficient engines, rather than lower road usage, have helped keep emissions levels relatively stable, since the <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/741953/road-traffic-estimates-in-great-britain-2017.pdf" target="_blank"> traffic volume on UK roads is at record highs</a>. With increasing investment in cleaner fuel types, and a <a href="https://www.statista.com/topics/2298/the-uk-electric-vehicle-industry/" target="_blank">growing number of hybrid and electric vehicles on UK roads</a>, it is hoped that the emissions from UK roads will begin to decrease over the coming decades.</p>
