Added bootstrap figure classes to intro text img and caption

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <p>However, since the dawn of the Industrial Revolution in around 1750, human activities have increased the atmospheric concentration of greenhouse gases. This is of concern, as the current scientific consensus holds that anthropogenic (human) greenhouse gas emissions will lead to a rise in average global temperatures over the next few decades, with potentially harmful effects on ecosystems, biodiversity, and the economy.</p>
                 <p>Road transport in particular is a major contributor to greenhouse gas emissions in many countries. In the UK, as of 2018 <a href="https://www.independent.co.uk/environment/air-pollution-uk-transport-most-polluting-sector-greenhouse-gas-emissions-drop-carbon-dioxide-a8196866.html" target="_blank">the majority of man-made greenhouse gas emissions come from road transport</a>. The dashboard below visualises the latest official statistics available from UK government sources, covering road transport emissions between the years 1990 and 2016. More information on the statistics used to generate this dashboard can be found <a href="https://www.gov.uk/government/statistics/final-uk-greenhouse-gas-emissions-national-statistics-1990-2016" target="_blank">here</a>.</p>
                 <figure>
-                    <img src="assets/images/congestion.jpg" alt="Congestion on UK roads">
-                    <figcaption>Congestion on UK roads is becoming a major problem, leading to an increase in emissions.</figcaption>
+                    <img class="figure-img rounded" src="assets/images/congestion.jpg" alt="Congestion on UK roads">
+                    <figcaption class="figure-caption">Congestion on UK roads is becoming a major problem, leading to an increase in emissions.</figcaption>
                 </figure>
             </div>
         </section>
