The percentage paragraph for the over time graphs is now hidden if 'All Vehicles' is selected

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div id="source-selector" class="col-12"></div>
             <div class="text-center col-12">
                 <p><span class="show-source-span">There was a total of</span> <span id="show-time-figure"></span> kilotons of emissions throughout the period.</p>
-                <p>That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
+                <p id="percentage-p">That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
