Removed %force-center from copyright information, using bootstrap class text-center instead

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li class="list-inline-item"><a href="#" onclick="topFunction()">Back to Top</a></li>
             <li class="list-inline-item"><a href="http://naei.beis.gov.uk/data/data-selector">Source of Data</a></li>
         </ul>
-        <p>Chris Hengmith &#169; 2018</p>
+        <p class="text-center">Chris Hengmith &#169; 2018</p>
     </footer>
     
     <!-- SCRIPTS -->
