Added target _blank to footer links where needed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <footer>
         <ul class="list-inline text-center">
             <li class="list-inline-item"><a href="#" onclick="topFunction()">Back to Top</a></li>
-            <li class="list-inline-item"><a href="http://naei.beis.gov.uk/data/data-selector">Source of Data</a></li>
+            <li class="list-inline-item"><a href="http://naei.beis.gov.uk/data/data-selector" target="_blank">Source of Data</a></li>
         </ul>
         <p class="text-center">Chris Hengmith &#169; 2018</p>
     </footer>
