Removed redundant anchor tag wrap around h1 and deleted newly redundant markup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark">
-        <a class="navbar-brand" href="#"><h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1></a>
+        <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
     </nav>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
