--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <nav class="navbar navbar-dark">
         <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
+        <h2>Interactive Data Dashboard</h2>
     </nav>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
