Added class to font-awesome div and declared font-size and margin

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
-            <div>
+            <div class="fa-div">
                 <i class="fas fa-chart-pie"></i>
                 <i class="fas fa-chart-line"></i>
                 <i class="fas fa-chart-bar"></i>
