Added jump to charts link

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
     </nav>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
-            <div class="fa-div">
+            <div class="fa-div col-12 text-center">
                 <i class="fas fa-chart-pie"></i>
                 <i class="fas fa-chart-line"></i>
                 <i class="fas fa-chart-bar"></i>
                 <i class="fas fa-chart-area"></i>
             </div>
+            <a href="#charts" class="chart-jump col-12 text-center"><p>Jump to Charts</p></a>
             <div class="offset-md-1 col-md-10">
                 <h2 class="text-uppercase text-center">Introduction</h2>
                 <p>A greenhouse gas is a gas that absorbs and emits radiant energy within the thermal infrared range, causing the greenhouse effect. On Earth, the primary greenhouse gases within the atmosphere are water vapour, carbon dioxide, methane, nitrous oxide and ozone.</p>
