Added jump to charts functionality

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         
         <hr>
         
+        <a name="charts"></a>
         <section class="row reveal-three">
             <h2 class="text-uppercase text-center">Total emissions over the period.</h2>
             <div class="offset-md-1 col-md-10">
