--- a/index.html
+++ b/index.html
@@ -74,7 +74,18 @@
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
-            <div id="source-selector-2" class="col-12"></div>
+            <select>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+                <option></option>
+            </select>
         </section>
 
         <hr>
