--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
-            <select>
+            <select id="source-selector-2">
                 <option></option>
                 <option></option>
                 <option></option>
