Duplicated options from 1st source select box to 2nd source select box

--- a/index.html
+++ b/index.html
@@ -74,18 +74,7 @@
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
-            <select id="source-selector-2">
-                <option></option>
-                <option></option>
-                <option></option>
-                <option></option>
-                <option></option>
-                <option></option>
-                <option></option>
-                <option></option>
-                <option></option>
-                <option></option>
-            </select>
+            <select id="source-selector-2"></select>
         </section>
 
         <hr>
