Added html markup for year-selector-2

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 </div>
                 <div id="total-emissions-per-source-pie" class="col-xl-6"></div>
                 <div id="total-emissions-per-source" class="col-xl-6"></div>
+                <select id="year-selector-2"></select>
         </section>
     </main>
     
