--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
                 <div id="pie-container" class="col-xl-6">
                     <div class="popup" onclick="chartPopup()">
-                         <span class="popuptext" id="myPopup">Hover over the slices to see more information</span>
+                        <span class="popuptext" id="myPopup">Hover over the slices to see more information<i class="fa fa-window-close" aria-hidden="true"></i></span>
                     </div>
                     <div id="total-emissions-per-source-pie"></div>
                 </div>
