Added loader html, added loader.scss, began stlying up to custom border colour

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
         <h2>Interactive Data Dashboard</h2>
     </nav>
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+    </div>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
             <div class="fa-div col-12 text-center">
@@ -122,8 +125,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
     <!-- Page scroll scripts -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="assets/js/pageScroll.js"></script>
+    <!--<script src="https://unpkg.com/scrollreveal"></script>-->
+    <!--<script src="assets/js/pageScroll.js"></script>-->
     <!-- Custom scripts -->
     <script src="assets/js/chartScript.js"></script>
 </body>
