--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </nav>
     <div id="loader-wrapper">
         <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
     </div>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
