--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </nav>
     <div id="loader-wrapper">
         <div id="loader"></div>
+        <p>Loading...</p>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
     </div>
