--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div id="loader-wrapper">
         <div id="loader"></div>
         <p>Loading...</p>
-        <div class="loader-section section-left"></div>
-        <div class="loader-section section-right"></div>
+        <div class="loader-section"></div>
     </div>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
