--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!-- Custom -->
     <link rel="stylesheet" href="assets/stylesheets/style.css" type="text/css" />
+    <!-- No JS -->
+    <script src="assets/js/no-js.js"></script>
 </head>
-<body>
+<body class="no-js">
     <nav class="navbar navbar-dark">
         <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
         <h2>Interactive Data Dashboard</h2>
