Implemented no-js display

--- a/index.html
+++ b/index.html
@@ -19,15 +19,22 @@
     <script src="assets/js/no-js.js"></script>
 </head>
 <body class="no-js">
-    <nav class="navbar navbar-dark">
-        <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
-        <h2>Interactive Data Dashboard</h2>
-    </nav>
     <div id="loader-wrapper">
         <div id="loader"></div>
         <p>Loading...</p>
         <div class="loader-section"></div>
     </div>
+    <div id="no-js-display">
+        <div>
+            <p><span>No Javascript Detected!</span></p>
+            <i class="far fa-frown"></i>
+            <p>Please enable Javascript to view the dashboard</p>
+        </div>
+    </div>
+    <nav class="navbar navbar-dark">
+        <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
+        <h2>Interactive Data Dashboard</h2>
+    </nav>
     <main class="container-fluid">
         <section class="intro-text row reveal-one">
             <div class="fa-div col-12 text-center">
