Added <noscript> to index

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <p>Loading...</p>
         <div class="loader-section"></div>
     </div>
-    <div id="no-js-display">
+    <noscript id="no-js-display">
         <div>
             <p><span>No Javascript Detected!</span></p>
             <i class="far fa-frown"></i>
             <p>Please enable Javascript to view the dashboard</p>
         </div>
-    </div>
+    </noscript>
     <nav class="navbar navbar-dark">
         <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
         <h2>Interactive Data Dashboard</h2>
@@ -146,7 +146,7 @@
     <!--<script src="assets/js/pageScroll.js"></script>-->
     <!-- Custom scripts -->
     <script src="assets/js/chartScript.js"></script>
-</body>
-    <!-- No JS -->
+    <!-- No JS Script -->
     <script src="assets/js/no-js.js"></script>
+</body>
 </html>
