--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
                 <p>Cleaner and more efficient engines, rather than lower road usage, have helped keep emissions levels relatively stable, since the <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/741953/road-traffic-estimates-in-great-britain-2017.pdf" target="_blank"> traffic volume on UK roads is at record highs</a>. With increasing investment in cleaner fuel types, and a <a href="https://www.statista.com/topics/2298/the-uk-electric-vehicle-industry/" target="_blank">growing number of hybrid and electric vehicles on UK roads</a>, it is hoped that the emissions from UK roads will begin to decrease over the coming decades.</p>
                 <p>The two charts below show the trend in emissions over time. Use the selection box to focus on a particular vehicle type. You can also hover over the lines to see more information.</p>
             </div>
-            <div id="source-selector" class="col-12"></div>
+            <div id="source-selector-container">
+                <p>Select vehicle type:</p>
+                <div id="source-selector" class="col-12"></div>
+            </div>
             <div class="text-center col-12">
                 <p><span class="show-source-span">There was a total of</span> <span id="show-time-figure"></span> kilotons of emissions throughout the period.</p>
                 <p id="percentage-p">That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
