--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
             </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
-            <select id="source-selector-2"></select>
+            <div class="selector-container">
+                <p>Select vehicle type:</p>
+                <select id="source-selector-2"></select>
+            </div>
         </section>
 
         <hr>
